# latency_arbitrage_bot

./: .gitignore  README.md  RISKS_AND_DISCLAIMERS.md  mix.exs
config/: config.exs  dev.exs  kalshi_demo_private_key.pem  prod.exs  secrets.exs
lib/latency_arbitrage_bot/: application.ex
lib/latency_arbitrage_bot/data/: edge_engine.ex  price_oracle.ex  risk_manager.ex
lib/latency_arbitrage_bot/support/: endpoint.ex  telemetry.ex
lib/latency_arbitrage_bot/venues/: supervisor.ex
lib/latency_arbitrage_bot/venues/kalshi/: adapter.ex  signer.ex
lib/latency_arbitrage_bot/venues/polymarket/: adapter.ex  signer.ex
python/: .env.example  .gitignore  LATENCY_ARB.md  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
python/config/: __init__.py
python/latency_arbitrage/: __init__.py  cli.py  config.py  edge_engine.py  rate_limiter.py  risk_manager.py
python/latency_arbitrage/kalshi/: __init__.py  adapter.py  signer.py
python/latency_arbitrage/venues/: __init__.py
python/latency_arbitrage/venues/kalshi/: __init__.py  adapter.py  signer.py
python/venues/: __init__.py  demo.py  kalshi.py
test/: kalshi_auth_test.exs
