[project]
name = "latency-arbitrage-bot"
version = "0.1.0"
description = "Multi-venue latency arbitrage bot for prediction markets"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.1",
    "ecdsa>=0.19.0",
]

[project.scripts]
latency-bot = "latency_arbitrage_bot.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
